# rs_asio

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  README_CN.md  RS_ASIO.sln  line6 pod hd500x
AsioDriverRefresher/: AsioHelpers.cpp  AsioHelpers.h  AsioSharedHost.cpp  AsioSharedHost.h  AudioProcessing.cpp  AudioProcessing.h  ComBaseUnknown.h  Config.cpp  Config.h  Configurator.cpp  Configurator.h  DebugDeviceEnum.cpp  DebugDeviceEnum.h  DebugWrapperAudioClient.cpp  DebugWrapperAudioClient.h  DebugWrapperAudioEndpointVolume.cpp  DebugWrapperAudioEndpointVolume.h  DebugWrapperCaptureClient.cpp  DebugWrapperCaptureClient.h  DebugWrapperDevice.cpp  DebugWrapperDevice.h  DebugWrapperDevicePropertyStore.cpp  DebugWrapperDevicePropertyStore.h  DebugWrapperEndpoint.cpp  DebugWrapperEndpoint.h  DebugWrapperRenderClient.cpp  DebugWrapperRenderClient.h  FileHelper.cpp  FileHelper.h  Log.cpp  Log.h  MyUnknown.h  Patcher.cpp  Patcher.h  Patcher_21a8959a.cpp  Patcher_d1b38fcb.cpp  RSAggregatorDeviceEnum.cpp  RSAggregatorDeviceEnum.h  RSAsioAudioCaptureClient.cpp  RSAsioAudioCaptureClient.h  (+33 more)
Preset Configurations/: RS_ASIO Scarlett 2i2.ini  RS_ASIO Scarlett Solo.ini
RS_ASIO/: AsioHelpers.cpp  AsioHelpers.h  AsioSharedHost.cpp  AsioSharedHost.h  AudioProcessing.cpp  AudioProcessing.h  ComBaseUnknown.h  Configurator.cpp  Configurator.h  DebugDeviceEnum.cpp  DebugDeviceEnum.h  DebugWrapperAudioClient.cpp  DebugWrapperAudioClient.h  DebugWrapperAudioEndpointVolume.cpp  DebugWrapperAudioEndpointVolume.h  DebugWrapperCaptureClient.cpp  DebugWrapperCaptureClient.h  Log.cpp  (+56 more)
(+68 files in other folders)
